[package]
name = "rust_jumpnrun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_ecs_ldtk = "0.9.0"
bevy_ecs_tilemap = "0.12.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
atlas = ["bevy_ecs_tilemap/atlas"]

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"


