[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12.1"
shared = { path = "../shared" }
bevy_quinnet = "0.6"
serde = { version = "1.0.198", features = ["derive"] }
bevy_ecs_ldtk = "0.9.0"
bevy_ecs_tilemap = "0.12.0"
bevy_rapier2d = "0.23.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
atlas = ["bevy_ecs_tilemap/atlas"]
