[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", default-features = false }
serde = { version = "1.0.198", features = ["derive"] }
bevy_quinnet = "0.6"
shared = { path = "../shared" }
